# MachineAI

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260609_0001_create_users_table.py
app/: __init__.py  main.py
app/api/v1/endpoints/: health.py
app/core/: __init__.py  config.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  base.py  user.py
app/schemas/: token.py
backend/: requirements.txt
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/gcode/: parser.py
backend/app/models/: __init__.py  analysis.py  material.py  project.py  tool.py  user.py
backend/app/routes/: __init__.py  auth.py  gcode.py  projects.py
backend/app/services/: project_service.py
backend/tests/: test_gcode.py
docs/: backend-foundation.md  week1-development-log.md  week2-development-log.md  week2-development-log.txt  week3-development-log.md  week4-development-log.md
tests/: test_security.py
